other/require-annotations/pod-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    corp.org/department: ""
  name: badpod01
spec:
  containers:
  - name: busybox
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
  - name: busybox
    image: busybox:1.35
