other/require-annotations/pod-good.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    corp.org/department: "foo"
  name: goodpod01
spec:
  containers:
  - name: busybox
    image: busybox:1.35
